4. Allow 'Random mixes' to be pinned to home screen.
5. Add option to use full page for now-playing backdrop, i.e. extend into top
   toolbar and (on mobile) bottom navigation bar.
6. Add slight shadow to now-playing image.
7. On desktop layout auto-switch to no-playing when use 'Play now' action, as
   per mobile layout.

5.1.1
-----
1. Fix 'Remote libraries' cloud icon appearing with no text on home screen.
2. Use padding for desktop thin now-playing bar under iOS.
3. Revert moving 'Random Mix' to queue menu, and place back under 'My Music'.
4. Don't show 'Random Mix' in 'My Music' for party mode.
5. Mix type is 'works', not 'work', for 'Random Mix' by 'Works'.

5.1.0
-----
 1. Replace shuffle icon with dice icon if random play is active, when using
    LMS >= 9.0
 2. Move 'Random Mix' to queue menu.
 3. Add 'Copy details' action to menu of certain items.
 4. Prompt if change settings page and a value has been modified.
 5. Update skin language when LMS language is changed.
 6. Move 'Remote Libraries' into 'Apps'.
 7. Hide iframe (e.g. Settings pages) until loaded.
 8. Add custom icon for LMS 9's 'Recently Updated Albums' view.
 9. Add ability to hide 'Extras' items via server-side preference file.
10. Add icons to 'Disks and Folders' listing.
11. Ignore 'itemNoAction' items in BMF and 'Disks and Folders'.
12. Add ability to hide players via preference file.
13. Separate timer resets in screensaver.
14. Allow to manually specify screensaver timeouts by editing
    'screensaverTimeout' and 'npSwitchTimout' in server-side preference file.
15. Better layout for 'Browse modes' dialog.
16. Don't sort items of 'Radio / My Presets'
17. Fix updating comboboxes in SqueezeDSP.

5.0.4
-----
1. Move 'CD Player' into 'Apps' and use JSONRPC API for this.
2. Open http/https weblinks in new window.
3. Refresh player status after start/stop 'Random Mix'.
4. Try to fix buttons, etc, in 'Extras' items opening new windows.